tests/ui/openapi_type/unknown_key.stderr
error: Unknown key
 --> $DIR/unknown_key.rs:6:12
  |
6 |     #[openapi(like = "pizza")]
  |               ^^^^
